@@ -20,8 +20,10 @@ package org.treetank.axislayer;
 
 import java.io.File;
 
+import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
+import org.treetank.api.IAxis;
 import org.treetank.api.ISession;
 import org.treetank.api.IWriteTransaction;
 import org.treetank.sessionlayer.Session;
@@ -48,14 +50,10 @@ public class AttributeAxisTest {
     IAxisTest.testIAxisConventions(new AttributeAxis(wtx), new long[] {});
 
     wtx.moveTo(2L);
-    IAxisTest.testIAxisConventions(
-        new AttributeAxis(wtx),
-        new long[] { 2L });
+    IAxisTest.testIAxisConventions(new AttributeAxis(wtx), new long[] { 2L });
 
     wtx.moveTo(8L);
-    IAxisTest.testIAxisConventions(
-        new AttributeAxis(wtx),
-        new long[] { 8L });
+    IAxisTest.testIAxisConventions(new AttributeAxis(wtx), new long[] { 8L });
 
     wtx.moveTo(11L);
     IAxisTest.testIAxisConventions(new AttributeAxis(wtx), new long[] {});
@@ -64,6 +62,49 @@ public class AttributeAxisTest {
     wtx.close();
     session.close();
 
+  }
+
+  @Test
+  public void testMultipleAttributes() {
+    final ISession session = Session.beginSession(PATH);
+    final IWriteTransaction wtx = session.beginWriteTransaction();
+    final long nodeKey = wtx.insertElementAsFirstChild("foo", "", "");
+    wtx.insertAttribute("foo0", "", "", 0);
+    wtx.insertAttribute("foo1", "", "", 1);
+    wtx.insertAttribute("foo2", "", "", 2);
+
+    Assert.assertEquals(true, wtx.moveTo(nodeKey));
+    Assert.assertEquals("foo0", wtx.getAttributeLocalPart(0));
+    Assert.assertEquals("foo1", wtx.getAttributeLocalPart(1));
+    Assert.assertEquals("foo2", wtx.getAttributeLocalPart(2));
+    Assert.assertEquals(0, wtx.getAttributeValueAsInt(0));
+    Assert.assertEquals(1, wtx.getAttributeValueAsInt(1));
+    Assert.assertEquals(2, wtx.getAttributeValueAsInt(2));
+
+    Assert.assertEquals(true, wtx.moveTo(nodeKey));
+    final IAxis axis = new AttributeAxis(wtx);
+
+    Assert.assertEquals(true, axis.hasNext());
+    axis.next();
+    Assert.assertEquals(nodeKey, wtx.getNodeKey());
+    Assert.assertEquals("foo0", wtx.getLocalPart());
+    Assert.assertEquals(0, wtx.getValueAsInt());
+
+    Assert.assertEquals(true, axis.hasNext());
+    axis.next();
+    Assert.assertEquals(nodeKey, wtx.getNodeKey());
+    Assert.assertEquals("foo1", wtx.getLocalPart());
+    Assert.assertEquals(1, wtx.getValueAsInt());
+
+    Assert.assertEquals(true, axis.hasNext());
+    axis.next();
+    Assert.assertEquals(nodeKey, wtx.getNodeKey());
+    Assert.assertEquals("foo2", wtx.getLocalPart());
+    Assert.assertEquals(2, wtx.getValueAsInt());
+
+    wtx.abort();
+    wtx.close();
+    session.close();
   }
 
 }
