@@ -18,6 +18,7 @@
  
 TreeTank 4.18
 -------------
+10 Fixed bug with cursor moving to attributes.
  9 SAXHandler now able to insert subtrees into an existing treetank.
  8 SAXGenerator now only accepting IReadTransaction. It will allways perform
    a descendant-or self step on the currently selected node.
